Chose a better page for Beasts

--- a/games.yaml
+++ b/games.yaml
@@ -136,7 +136,7 @@
   info: punched card
 
 - name: beasts
-  url: http://peteg.org/beasts/other/
+  url: https://peteg.org/beasts/beasts.html
   info: The game Beasts is a Linux version of the old DOS game called Beast.
   wikipedia: https://en.wikipedia.org/wiki/Beast_(video_game)
 
